<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_expanded"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_gradient"
    android:backgroundTintMode="add"
    android:paddingLeft="0dp"
    android:paddingTop="24dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp">

    <LinearLayout
        android:id="@+id/view_expanded_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.34">

            <ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.layouts.SquareButton
                android:id="@+id/collapse"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start|top"
                android:background="@drawable/down_bg" />

            <ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.layouts.SquareButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:background="@drawable/ic_more_vert_black_24dp"
                android:backgroundTint="@color/white"
                app:squareScaleFit="0.75" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/song_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.11">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never">

            </androidx.viewpager2.widget.ViewPager2>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.34">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.layouts.SquareButton
                        android:id="@+id/shuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/shuffle_background"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.layouts.SquareButton
                        android:id="@+id/play_prev"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/play_prev_bg"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.layouts.SquareButton
                        android:id="@+id/play_bg"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/pause_background"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.layouts.SquareButton
                        android:id="@+id/play_next"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/play_next_bg"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.layouts.SquareButton
                        android:id="@+id/loop"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/loop_background"
                        android:gravity="center" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.33">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:hint="@string/name"
                        android:padding="5dip"
                        android:text=""
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="18sp"
                        tools:text="PlaylistName" />

                    <ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.layouts.SquareButton
                        android:id="@+id/playlist"
                        android:layout_width="25dip"
                        android:layout_height="25dip"
                        android:layout_gravity="top"
                        android:background="@drawable/playlist"
                        android:padding="5dip" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBar"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:minHeight="18dp"
                    android:progressDrawable="@drawable/seek_bar_bg"
                    android:scrollbarSize="@dimen/seek_bar_thickness"
                    android:thumb="@drawable/seek_thumb_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/playback_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:padding="5dip"
                        android:text="1:12"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/playback_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:hint="@string/name"
                        android:padding="5dip"
                        android:text="4:26"
                        android:textAlignment="viewEnd"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textColorHint="#ffffff"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

        </FrameLayout>

    </LinearLayout>

</FrameLayout>