<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/playing_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:padding="0dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="135dp"
        app:layout_behavior="ca.umanitoba.cs.code.comp3350.winter2020.Soundbox.presentation.ViewPagerBottomSheetBehavior">

        <ViewSwitcher
            android:id="@+id/view_switcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp">

            <include layout="@layout/content_playing_controls_collapsed" />

            <include layout="@layout/content_playing_controls_expanded" />

        </ViewSwitcher>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>