...
    <string name="empty_playlists">Start creating a custom playlists to see your playlists here.</string>
    <string name="empty_playback_queue_title">No queued songs</string>
    <string name="empty_playback_queue">Add songs to see your custom playback queue here.</string>
    <string name="empty_tracklist_title">No songs.</string>
    <string name="empty_tracklist">Add songs to this tracklist to see them here.</string>
    <string name="shuffle_empty">Playback Queue Empty!</string>
    <string name="shuffle_success">Playback Queue Shuffled!</string>
    <string name="clear_queue">Clear queue</string>
    <string name="jump_playing">Jump playing</string>
    <string name="select_audio">Select Song</string>
    <string name="search_audio">Search for songs!</string>
    <string name="search_playlists">Search for playlists!</string>
    <string name="likes">Likes</string>
...
